fixed z-index for spectrum

--- a/src/styles/audio-canvas.scss
+++ b/src/styles/audio-canvas.scss
@@ -4,4 +4,5 @@
   width: 100%;
   height: 80px;
   left: 0;
+  z-index: 100;
 }
